# simple-telepromoter

./: .gitignore
release/text-win64-20260610-005239/: text.json
text/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  prompterwidget.cpp  prompterwidget.h  text.json
